src/cwb/cl/registry.output
Terminals which are not used

   ACCESS_SYM
   ASSERT_SYM


Grammar

    0 $accept: Registry $end

    1 @1: /* empty */

    2 Registry: @1 Header Declaration
    3         | error

    4 Declaration: Attributes

    5 @2: /* empty */

    6 Header: NameDecl IDDecl OptHome OptInfo @2 OptAdmin OptHostAccessClause OptUserAccessClause OptGroupAccessClause OptProperties

    7 OptInfo: INFO_SYM path
    8        | /* empty */

    9 OptHome: HOME_SYM path
   10        | /* empty */

   11 OptAdmin: ADMIN_SYM id
   12         | /* empty */

   13 OptUserAccessClause: USER_SYM '{' IDList '}'
   14                    | /* empty */

   15 OptGroupAccessClause: GROUP_SYM '{' IDList '}'
   16                     | /* empty */

   17 OptHostAccessClause: HOST_SYM '{' IDList '}'
   18                    | /* empty */

   19 NameDecl: NAME_SYM string

   20 IDDecl: ID_SYM id
   21       | /* empty */

   22 @3: /* empty */

   23 Attributes: Attribute @3 Attributes

   24 @4: /* empty */

   25 Attributes: IGNORE_SYM id id StorageSpec @4 Attributes
   26           | /* empty */

   27 @5: /* empty */

   28 Attribute: ATTRIBUTE_SYM id @5 AttrBody
   29          | ALIGNED_SYM id StorageSpec
   30          | STRUCTURE_SYM id StorageSpec
   31          | DYNAMIC_SYM id '(' ArgList ')' ':' SingleArg string

   32 StorageSpec: path
   33            | /* empty */

   34 AttrBody: OptFieldDefs
   35         | path

   36 ArgList: SingleArg
   37        | ArgList ',' SingleArg

   38 SingleArg: id
   39          | DOTS_SYM

   40 OptFieldDefs: '{' FieldDefs '}'
   41             | /* empty */

   42 FieldDefs: FieldDef FieldDefs
   43          | /* empty */

   44 FieldDef: DIR_SYM path
   45         | CORPUS_SYM path
   46         | REVCORP_SYM path
   47         | REVCIDX_SYM path
   48         | FREQS_SYM path
   49         | LEXICON_SYM path
   50         | LEXIDX_SYM path
   51         | LEXSRT_SYM path

   52 path: id
   53     | string

   54 id: IDENTIFIER
   55   | NUMBER

   56 IDList: IDList id
   57       | /* empty */

   58 string: STRING

   59 OptProperties: OptProperties Property
   60              | /* empty */

   61 Property: PROPERTY_SYM IDENTIFIER '=' STRING
   62         | PROPERTY_SYM IDENTIFIER '=' id


Terminals, with rules where they appear

$end (0) 0
'(' (40) 31
')' (41) 31
',' (44) 37
':' (58) 31
'=' (61) 61 62
'{' (123) 13 15 17 40
'}' (125) 13 15 17 40
error (256) 3
NAME_SYM (258) 19
ID_SYM (259) 20
INFO_SYM (260) 7
HOME_SYM (261) 9
ATTRIBUTE_SYM (262) 28
DIR_SYM (263) 44
CORPUS_SYM (264) 45
REVCORP_SYM (265) 46
REVCIDX_SYM (266) 47
FREQS_SYM (267) 48
LEXICON_SYM (268) 49
LEXIDX_SYM (269) 50
LEXSRT_SYM (270) 51
STRUCTURE_SYM (271) 30
ALIGNED_SYM (272) 29
DYNAMIC_SYM (273) 31
DOTS_SYM (274) 39
IGNORE_SYM (275) 25
ADMIN_SYM (276) 11
ACCESS_SYM (277)
USER_SYM (278) 13
GROUP_SYM (279) 15
ASSERT_SYM (280)
HOST_SYM (281) 17
PROPERTY_SYM (282) 61 62
IDENTIFIER (283) 54 61 62
STRING (284) 58 61
NUMBER (285) 55


Nonterminals, with rules where they appear

$accept (38)
    on left: 0
Registry (39)
    on left: 2 3, on right: 0
@1 (40)
    on left: 1, on right: 2
Declaration (41)
    on left: 4, on right: 2
Header (42)
    on left: 6, on right: 2
@2 (43)
    on left: 5, on right: 6
OptInfo (44)
    on left: 7 8, on right: 6
OptHome (45)
    on left: 9 10, on right: 6
OptAdmin (46)
    on left: 11 12, on right: 6
OptUserAccessClause (47)
    on left: 13 14, on right: 6
OptGroupAccessClause (48)
    on left: 15 16, on right: 6
OptHostAccessClause (49)
    on left: 17 18, on right: 6
NameDecl (50)
    on left: 19, on right: 6
IDDecl (51)
    on left: 20 21, on right: 6
Attributes (52)
    on left: 23 25 26, on right: 4 23 25
@3 (53)
    on left: 22, on right: 23
@4 (54)
    on left: 24, on right: 25
Attribute (55)
    on left: 28 29 30 31, on right: 23
@5 (56)
    on left: 27, on right: 28
StorageSpec (57)
    on left: 32 33, on right: 25 29 30
AttrBody (58)
    on left: 34 35, on right: 28
ArgList (59)
    on left: 36 37, on right: 31 37
SingleArg (60)
    on left: 38 39, on right: 31 36 37
OptFieldDefs (61)
    on left: 40 41, on right: 34
FieldDefs (62)
    on left: 42 43, on right: 40 42
FieldDef (63)
    on left: 44 45 46 47 48 49 50 51, on right: 42
path (64)
    on left: 52 53, on right: 7 9 32 35 44 45 46 47 48 49 50 51
id (65)
    on left: 54 55, on right: 11 20 25 28 29 30 31 38 52 56 62
IDList (66)
    on left: 56 57, on right: 13 15 17 56
string (67)
    on left: 58, on right: 19 31 53
OptProperties (68)
    on left: 59 60, on right: 6 59
Property (69)
    on left: 61 62, on right: 59


state 0

    0 $accept: . Registry $end

    error  shift, and go to state 1

    NAME_SYM  reduce using rule 1 (@1)

    Registry  go to state 2
    @1        go to state 3


state 1

    3 Registry: error .

    $default  reduce using rule 3 (Registry)


state 2

    0 $accept: Registry . $end

    $end  shift, and go to state 4


state 3

    2 Registry: @1 . Header Declaration

    NAME_SYM  shift, and go to state 5

    Header    go to state 6
    NameDecl  go to state 7


state 4

    0 $accept: Registry $end .

    $default  accept


state 5

   19 NameDecl: NAME_SYM . string

    STRING  shift, and go to state 8

    string  go to state 9


state 6

    2 Registry: @1 Header . Declaration

    ATTRIBUTE_SYM  shift, and go to state 10
    STRUCTURE_SYM  shift, and go to state 11
    ALIGNED_SYM    shift, and go to state 12
    DYNAMIC_SYM    shift, and go to state 13
    IGNORE_SYM     shift, and go to state 14

    $default  reduce using rule 26 (Attributes)

    Declaration  go to state 15
    Attributes   go to state 16
    Attribute    go to state 17


state 7

    6 Header: NameDecl . IDDecl OptHome OptInfo @2 OptAdmin OptHostAccessClause OptUserAccessClause OptGroupAccessClause OptProperties

    ID_SYM  shift, and go to state 18

    $default  reduce using rule 21 (IDDecl)

    IDDecl  go to state 19


state 8

   58 string: STRING .

    $default  reduce using rule 58 (string)


state 9

   19 NameDecl: NAME_SYM string .

    $default  reduce using rule 19 (NameDecl)


state 10

   28 Attribute: ATTRIBUTE_SYM . id @5 AttrBody

    IDENTIFIER  shift, and go to state 20
    NUMBER      shift, and go to state 21

    id  go to state 22


state 11

   30 Attribute: STRUCTURE_SYM . id StorageSpec

    IDENTIFIER  shift, and go to state 20
    NUMBER      shift, and go to state 21

    id  go to state 23


state 12

   29 Attribute: ALIGNED_SYM . id StorageSpec

    IDENTIFIER  shift, and go to state 20
    NUMBER      shift, and go to state 21

    id  go to state 24


state 13

   31 Attribute: DYNAMIC_SYM . id '(' ArgList ')' ':' SingleArg string

    IDENTIFIER  shift, and go to state 20
    NUMBER      shift, and go to state 21

    id  go to state 25


state 14

   25 Attributes: IGNORE_SYM . id id StorageSpec @4 Attributes

    IDENTIFIER  shift, and go to state 20
    NUMBER      shift, and go to state 21

    id  go to state 26


state 15

    2 Registry: @1 Header Declaration .

    $default  reduce using rule 2 (Registry)


state 16

    4 Declaration: Attributes .

    $default  reduce using rule 4 (Declaration)


state 17

   23 Attributes: Attribute . @3 Attributes

    $default  reduce using rule 22 (@3)

    @3  go to state 27


state 18

   20 IDDecl: ID_SYM . id

    IDENTIFIER  shift, and go to state 20
    NUMBER      shift, and go to state 21

    id  go to state 28


state 19

    6 Header: NameDecl IDDecl . OptHome OptInfo @2 OptAdmin OptHostAccessClause OptUserAccessClause OptGroupAccessClause OptProperties

    HOME_SYM  shift, and go to state 29

    $default  reduce using rule 10 (OptHome)

    OptHome  go to state 30


state 20

   54 id: IDENTIFIER .

    $default  reduce using rule 54 (id)


state 21

   55 id: NUMBER .

    $default  reduce using rule 55 (id)


state 22

   28 Attribute: ATTRIBUTE_SYM id . @5 AttrBody

    $default  reduce using rule 27 (@5)

    @5  go to state 31


state 23

   30 Attribute: STRUCTURE_SYM id . StorageSpec

    IDENTIFIER  shift, and go to state 20
    STRING      shift, and go to state 8
    NUMBER      shift, and go to state 21

    $default  reduce using rule 33 (StorageSpec)

    StorageSpec  go to state 32
    path         go to state 33
    id           go to state 34
    string       go to state 35


state 24

   29 Attribute: ALIGNED_SYM id . StorageSpec

    IDENTIFIER  shift, and go to state 20
    STRING      shift, and go to state 8
    NUMBER      shift, and go to state 21

    $default  reduce using rule 33 (StorageSpec)

    StorageSpec  go to state 36
    path         go to state 33
    id           go to state 34
    string       go to state 35


state 25

   31 Attribute: DYNAMIC_SYM id . '(' ArgList ')' ':' SingleArg string

    '('  shift, and go to state 37


state 26

   25 Attributes: IGNORE_SYM id . id StorageSpec @4 Attributes

    IDENTIFIER  shift, and go to state 20
    NUMBER      shift, and go to state 21

    id  go to state 38


state 27

   23 Attributes: Attribute @3 . Attributes

    ATTRIBUTE_SYM  shift, and go to state 10
    STRUCTURE_SYM  shift, and go to state 11
    ALIGNED_SYM    shift, and go to state 12
    DYNAMIC_SYM    shift, and go to state 13
    IGNORE_SYM     shift, and go to state 14

    $default  reduce using rule 26 (Attributes)

    Attributes  go to state 39
    Attribute   go to state 17


state 28

   20 IDDecl: ID_SYM id .

    $default  reduce using rule 20 (IDDecl)


state 29

    9 OptHome: HOME_SYM . path

    IDENTIFIER  shift, and go to state 20
    STRING      shift, and go to state 8
    NUMBER      shift, and go to state 21

    path    go to state 40
    id      go to state 34
    string  go to state 35


state 30

    6 Header: NameDecl IDDecl OptHome . OptInfo @2 OptAdmin OptHostAccessClause OptUserAccessClause OptGroupAccessClause OptProperties

    INFO_SYM  shift, and go to state 41

    $default  reduce using rule 8 (OptInfo)

    OptInfo  go to state 42


state 31

   28 Attribute: ATTRIBUTE_SYM id @5 . AttrBody

    IDENTIFIER  shift, and go to state 20
    STRING      shift, and go to state 8
    NUMBER      shift, and go to state 21
    '{'         shift, and go to state 43

    $default  reduce using rule 41 (OptFieldDefs)

    AttrBody      go to state 44
    OptFieldDefs  go to state 45
    path          go to state 46
    id            go to state 34
    string        go to state 35


state 32

   30 Attribute: STRUCTURE_SYM id StorageSpec .

    $default  reduce using rule 30 (Attribute)


state 33

   32 StorageSpec: path .

    $default  reduce using rule 32 (StorageSpec)


state 34

   52 path: id .

    $default  reduce using rule 52 (path)


state 35

   53 path: string .

    $default  reduce using rule 53 (path)


state 36

   29 Attribute: ALIGNED_SYM id StorageSpec .

    $default  reduce using rule 29 (Attribute)


state 37

   31 Attribute: DYNAMIC_SYM id '(' . ArgList ')' ':' SingleArg string

    DOTS_SYM    shift, and go to state 47
    IDENTIFIER  shift, and go to state 20
    NUMBER      shift, and go to state 21

    ArgList    go to state 48
    SingleArg  go to state 49
    id         go to state 50


state 38

   25 Attributes: IGNORE_SYM id id . StorageSpec @4 Attributes

    IDENTIFIER  shift, and go to state 20
    STRING      shift, and go to state 8
    NUMBER      shift, and go to state 21

    $default  reduce using rule 33 (StorageSpec)

    StorageSpec  go to state 51
    path         go to state 33
    id           go to state 34
    string       go to state 35


state 39

   23 Attributes: Attribute @3 Attributes .

    $default  reduce using rule 23 (Attributes)


state 40

    9 OptHome: HOME_SYM path .

    $default  reduce using rule 9 (OptHome)


state 41

    7 OptInfo: INFO_SYM . path

    IDENTIFIER  shift, and go to state 20
    STRING      shift, and go to state 8
    NUMBER      shift, and go to state 21

    path    go to state 52
    id      go to state 34
    string  go to state 35


state 42

    6 Header: NameDecl IDDecl OptHome OptInfo . @2 OptAdmin OptHostAccessClause OptUserAccessClause OptGroupAccessClause OptProperties

    $default  reduce using rule 5 (@2)

    @2  go to state 53


state 43

   40 OptFieldDefs: '{' . FieldDefs '}'

    DIR_SYM      shift, and go to state 54
    CORPUS_SYM   shift, and go to state 55
    REVCORP_SYM  shift, and go to state 56
    REVCIDX_SYM  shift, and go to state 57
    FREQS_SYM    shift, and go to state 58
    LEXICON_SYM  shift, and go to state 59
    LEXIDX_SYM   shift, and go to state 60
    LEXSRT_SYM   shift, and go to state 61

    $default  reduce using rule 43 (FieldDefs)

    FieldDefs  go to state 62
    FieldDef   go to state 63


state 44

   28 Attribute: ATTRIBUTE_SYM id @5 AttrBody .

    $default  reduce using rule 28 (Attribute)


state 45

   34 AttrBody: OptFieldDefs .

    $default  reduce using rule 34 (AttrBody)


state 46

   35 AttrBody: path .

    $default  reduce using rule 35 (AttrBody)


state 47

   39 SingleArg: DOTS_SYM .

    $default  reduce using rule 39 (SingleArg)


state 48

   31 Attribute: DYNAMIC_SYM id '(' ArgList . ')' ':' SingleArg string
   37 ArgList: ArgList . ',' SingleArg

    ')'  shift, and go to state 64
    ','  shift, and go to state 65


state 49

   36 ArgList: SingleArg .

    $default  reduce using rule 36 (ArgList)


state 50

   38 SingleArg: id .

    $default  reduce using rule 38 (SingleArg)


state 51

   25 Attributes: IGNORE_SYM id id StorageSpec . @4 Attributes

    $default  reduce using rule 24 (@4)

    @4  go to state 66


state 52

    7 OptInfo: INFO_SYM path .

    $default  reduce using rule 7 (OptInfo)


state 53

    6 Header: NameDecl IDDecl OptHome OptInfo @2 . OptAdmin OptHostAccessClause OptUserAccessClause OptGroupAccessClause OptProperties

    ADMIN_SYM  shift, and go to state 67

    $default  reduce using rule 12 (OptAdmin)

    OptAdmin  go to state 68


state 54

   44 FieldDef: DIR_SYM . path

    IDENTIFIER  shift, and go to state 20
    STRING      shift, and go to state 8
    NUMBER      shift, and go to state 21

    path    go to state 69
    id      go to state 34
    string  go to state 35


state 55

   45 FieldDef: CORPUS_SYM . path

    IDENTIFIER  shift, and go to state 20
    STRING      shift, and go to state 8
    NUMBER      shift, and go to state 21

    path    go to state 70
    id      go to state 34
    string  go to state 35


state 56

   46 FieldDef: REVCORP_SYM . path

    IDENTIFIER  shift, and go to state 20
    STRING      shift, and go to state 8
    NUMBER      shift, and go to state 21

    path    go to state 71
    id      go to state 34
    string  go to state 35


state 57

   47 FieldDef: REVCIDX_SYM . path

    IDENTIFIER  shift, and go to state 20
    STRING      shift, and go to state 8
    NUMBER      shift, and go to state 21

    path    go to state 72
    id      go to state 34
    string  go to state 35


state 58

   48 FieldDef: FREQS_SYM . path

    IDENTIFIER  shift, and go to state 20
    STRING      shift, and go to state 8
    NUMBER      shift, and go to state 21

    path    go to state 73
    id      go to state 34
    string  go to state 35


state 59

   49 FieldDef: LEXICON_SYM . path

    IDENTIFIER  shift, and go to state 20
    STRING      shift, and go to state 8
    NUMBER      shift, and go to state 21

    path    go to state 74
    id      go to state 34
    string  go to state 35


state 60

   50 FieldDef: LEXIDX_SYM . path

    IDENTIFIER  shift, and go to state 20
    STRING      shift, and go to state 8
    NUMBER      shift, and go to state 21

    path    go to state 75
    id      go to state 34
    string  go to state 35


state 61

   51 FieldDef: LEXSRT_SYM . path

    IDENTIFIER  shift, and go to state 20
    STRING      shift, and go to state 8
    NUMBER      shift, and go to state 21

    path    go to state 76
    id      go to state 34
    string  go to state 35


state 62

   40 OptFieldDefs: '{' FieldDefs . '}'

    '}'  shift, and go to state 77


state 63

   42 FieldDefs: FieldDef . FieldDefs

    DIR_SYM      shift, and go to state 54
    CORPUS_SYM   shift, and go to state 55
    REVCORP_SYM  shift, and go to state 56
    REVCIDX_SYM  shift, and go to state 57
    FREQS_SYM    shift, and go to state 58
    LEXICON_SYM  shift, and go to state 59
    LEXIDX_SYM   shift, and go to state 60
    LEXSRT_SYM   shift, and go to state 61

    $default  reduce using rule 43 (FieldDefs)

    FieldDefs  go to state 78
    FieldDef   go to state 63


state 64

   31 Attribute: DYNAMIC_SYM id '(' ArgList ')' . ':' SingleArg string

    ':'  shift, and go to state 79


state 65

   37 ArgList: ArgList ',' . SingleArg

    DOTS_SYM    shift, and go to state 47
    IDENTIFIER  shift, and go to state 20
    NUMBER      shift, and go to state 21

    SingleArg  go to state 80
    id         go to state 50


state 66

   25 Attributes: IGNORE_SYM id id StorageSpec @4 . Attributes

    ATTRIBUTE_SYM  shift, and go to state 10
    STRUCTURE_SYM  shift, and go to state 11
    ALIGNED_SYM    shift, and go to state 12
    DYNAMIC_SYM    shift, and go to state 13
    IGNORE_SYM     shift, and go to state 14

    $default  reduce using rule 26 (Attributes)

    Attributes  go to state 81
    Attribute   go to state 17


state 67

   11 OptAdmin: ADMIN_SYM . id

    IDENTIFIER  shift, and go to state 20
    NUMBER      shift, and go to state 21

    id  go to state 82


state 68

    6 Header: NameDecl IDDecl OptHome OptInfo @2 OptAdmin . OptHostAccessClause OptUserAccessClause OptGroupAccessClause OptProperties

    HOST_SYM  shift, and go to state 83

    $default  reduce using rule 18 (OptHostAccessClause)

    OptHostAccessClause  go to state 84


state 69

   44 FieldDef: DIR_SYM path .

    $default  reduce using rule 44 (FieldDef)


state 70

   45 FieldDef: CORPUS_SYM path .

    $default  reduce using rule 45 (FieldDef)


state 71

   46 FieldDef: REVCORP_SYM path .

    $default  reduce using rule 46 (FieldDef)


state 72

   47 FieldDef: REVCIDX_SYM path .

    $default  reduce using rule 47 (FieldDef)


state 73

   48 FieldDef: FREQS_SYM path .

    $default  reduce using rule 48 (FieldDef)


state 74

   49 FieldDef: LEXICON_SYM path .

    $default  reduce using rule 49 (FieldDef)


state 75

   50 FieldDef: LEXIDX_SYM path .

    $default  reduce using rule 50 (FieldDef)


state 76

   51 FieldDef: LEXSRT_SYM path .

    $default  reduce using rule 51 (FieldDef)


state 77

   40 OptFieldDefs: '{' FieldDefs '}' .

    $default  reduce using rule 40 (OptFieldDefs)


state 78

   42 FieldDefs: FieldDef FieldDefs .

    $default  reduce using rule 42 (FieldDefs)


state 79

   31 Attribute: DYNAMIC_SYM id '(' ArgList ')' ':' . SingleArg string

    DOTS_SYM    shift, and go to state 47
    IDENTIFIER  shift, and go to state 20
    NUMBER      shift, and go to state 21

    SingleArg  go to state 85
    id         go to state 50


state 80

   37 ArgList: ArgList ',' SingleArg .

    $default  reduce using rule 37 (ArgList)


state 81

   25 Attributes: IGNORE_SYM id id StorageSpec @4 Attributes .

    $default  reduce using rule 25 (Attributes)


state 82

   11 OptAdmin: ADMIN_SYM id .

    $default  reduce using rule 11 (OptAdmin)


state 83

   17 OptHostAccessClause: HOST_SYM . '{' IDList '}'

    '{'  shift, and go to state 86


state 84

    6 Header: NameDecl IDDecl OptHome OptInfo @2 OptAdmin OptHostAccessClause . OptUserAccessClause OptGroupAccessClause OptProperties

    USER_SYM  shift, and go to state 87

    $default  reduce using rule 14 (OptUserAccessClause)

    OptUserAccessClause  go to state 88


state 85

   31 Attribute: DYNAMIC_SYM id '(' ArgList ')' ':' SingleArg . string

    STRING  shift, and go to state 8

    string  go to state 89


state 86

   17 OptHostAccessClause: HOST_SYM '{' . IDList '}'

    $default  reduce using rule 57 (IDList)

    IDList  go to state 90


state 87

   13 OptUserAccessClause: USER_SYM . '{' IDList '}'

    '{'  shift, and go to state 91


state 88

    6 Header: NameDecl IDDecl OptHome OptInfo @2 OptAdmin OptHostAccessClause OptUserAccessClause . OptGroupAccessClause OptProperties

    GROUP_SYM  shift, and go to state 92

    $default  reduce using rule 16 (OptGroupAccessClause)

    OptGroupAccessClause  go to state 93


state 89

   31 Attribute: DYNAMIC_SYM id '(' ArgList ')' ':' SingleArg string .

    $default  reduce using rule 31 (Attribute)


state 90

   17 OptHostAccessClause: HOST_SYM '{' IDList . '}'
   56 IDList: IDList . id

    IDENTIFIER  shift, and go to state 20
    NUMBER      shift, and go to state 21
    '}'         shift, and go to state 94

    id  go to state 95


state 91

   13 OptUserAccessClause: USER_SYM '{' . IDList '}'

    $default  reduce using rule 57 (IDList)

    IDList  go to state 96


state 92

   15 OptGroupAccessClause: GROUP_SYM . '{' IDList '}'

    '{'  shift, and go to state 97


state 93

    6 Header: NameDecl IDDecl OptHome OptInfo @2 OptAdmin OptHostAccessClause OptUserAccessClause OptGroupAccessClause . OptProperties

    $default  reduce using rule 60 (OptProperties)

    OptProperties  go to state 98


state 94

   17 OptHostAccessClause: HOST_SYM '{' IDList '}' .

    $default  reduce using rule 17 (OptHostAccessClause)


state 95

   56 IDList: IDList id .

    $default  reduce using rule 56 (IDList)


state 96

   13 OptUserAccessClause: USER_SYM '{' IDList . '}'
   56 IDList: IDList . id

    IDENTIFIER  shift, and go to state 20
    NUMBER      shift, and go to state 21
    '}'         shift, and go to state 99

    id  go to state 95


state 97

   15 OptGroupAccessClause: GROUP_SYM '{' . IDList '}'

    $default  reduce using rule 57 (IDList)

    IDList  go to state 100


state 98

    6 Header: NameDecl IDDecl OptHome OptInfo @2 OptAdmin OptHostAccessClause OptUserAccessClause OptGroupAccessClause OptProperties .
   59 OptProperties: OptProperties . Property

    PROPERTY_SYM  shift, and go to state 101

    $default  reduce using rule 6 (Header)

    Property  go to state 102


state 99

   13 OptUserAccessClause: USER_SYM '{' IDList '}' .

    $default  reduce using rule 13 (OptUserAccessClause)


state 100

   15 OptGroupAccessClause: GROUP_SYM '{' IDList . '}'
   56 IDList: IDList . id

    IDENTIFIER  shift, and go to state 20
    NUMBER      shift, and go to state 21
    '}'         shift, and go to state 103

    id  go to state 95


state 101

   61 Property: PROPERTY_SYM . IDENTIFIER '=' STRING
   62         | PROPERTY_SYM . IDENTIFIER '=' id

    IDENTIFIER  shift, and go to state 104


state 102

   59 OptProperties: OptProperties Property .

    $default  reduce using rule 59 (OptProperties)


state 103

   15 OptGroupAccessClause: GROUP_SYM '{' IDList '}' .

    $default  reduce using rule 15 (OptGroupAccessClause)


state 104

   61 Property: PROPERTY_SYM IDENTIFIER . '=' STRING
   62         | PROPERTY_SYM IDENTIFIER . '=' id

    '='  shift, and go to state 105


state 105

   61 Property: PROPERTY_SYM IDENTIFIER '=' . STRING
   62         | PROPERTY_SYM IDENTIFIER '=' . id

    IDENTIFIER  shift, and go to state 20
    STRING      shift, and go to state 106
    NUMBER      shift, and go to state 21

    id  go to state 107


state 106

   61 Property: PROPERTY_SYM IDENTIFIER '=' STRING .

    $default  reduce using rule 61 (Property)


state 107

   62 Property: PROPERTY_SYM IDENTIFIER '=' id .

    $default  reduce using rule 62 (Property)
